# kiln-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DATASETS.md  FINDINGS.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml  vercel.json
.github/workflows/: ci.yml
benchmarks/results/detection/: leaderboard.json
benchmarks/results/tabular/: breast_cancer_leaderboard.json  leaderboard.json  titanic_leaderboard.json  wine_quality_leaderboard.json
benchmarks/results/unsupervised/: leaderboard.json
benchmarks/results/vision/: leaderboard.json
notebooks/: 01_tabular_titanic.ipynb  02_unsupervised_digits.ipynb  03_keras_fashion_mnist.ipynb  04_roboflow_yolo_hardhat.ipynb
src/kiln/: __init__.py  cli.py  types.py
src/kiln/datasets/: __init__.py  keras_fashion.py  roboflow_hardhat.py  sklearn_loader.py
src/kiln/eval/: harness.py  metrics.py
src/kiln/models/: keras_models.py  sklearn_models.py  yolo_trainer.py
src/kiln/vision/: opencv_utils.py
tests/: test_kiln.py
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/benchmarks/: page.tsx
web/src/app/docs/: page.tsx
web/src/app/docs/methodology/: page.tsx
web/src/components/: SiteFooter.tsx  SiteNav.tsx  TrackSection.tsx
web/src/data/: master_leaderboard.json
web/src/lib/: benchmarks.ts
